--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+body{
+  height: 100vh;
+}
+
 #container{
     width: 100%;
     height: 300px;
     display: flex;
+    /* flex-wrap: nowrap; */
     justify-content: center;
     align-items: center;
   }
@@ -21,13 +26,13 @@
     font-weight: bold;
     justify-content: center;
     align-items: center;
-    min-width: 2vw;
+    min-width: 2rem;
     height: 60px;
     border: 1px solid black;
     margin: .4rem .4rem;
     border-radius: .6rem;
     box-shadow: 4px 5px #ccc;
-    transition: background .2s ease-out, color .2s ease-out;
+    transition: background .4s ease-out, color .2s ease-out;
   }
   
   .selected{
