--- a/style.css
+++ b/style.css
@@ -1,25 +1,33 @@
-body{
-  height: 100vh;
+*{
+  padding: 0;
+  margin: 0;
+}
+
+body{ height: 100vh; }
+
+#options_section{
+  height: 100px;
+  padding: 10px 0px 15px 0px;
 }
 
 #container{
-    width: 100%;
-    height: 300px;
+    position: relative;
+    top: 6.75px;
+    height: calc(90vh - 100px);
     display: flex;
     /* flex-wrap: nowrap; */
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
   }
   
   .custom_btn{
     position: absolute;
     right: 0.25rem;
-    top: .25rem;
+    top: .5rem;
   }
   
   .block{
     position: relative;
-    top: 35%;
     display: flex;
     font-family: sans-serif;
     font-size: clamp(.8rem, 25vw, 1rem);
@@ -27,15 +35,25 @@ body{
     justify-content: center;
     align-items: center;
     min-width: 2rem;
-    height: 60px;
+    min-height: 30px;
     border: 1px solid black;
+    border-top-left-radius: .5rem;
+    border-top-right-radius: .5rem;
     margin: .4rem .4rem;
-    border-radius: .6rem;
-    box-shadow: 4px 5px #ccc;
+    /* border-radius: .6rem; */
+    box-shadow: 4px -3px #ccc;
     transition: background .4s ease-out, color .2s ease-out;
   }
   
   .selected{
       background: linear-gradient(to top, #4e9816, #57a818);
       color: #fff;
+  }
+
+  footer{
+    text-align: center;
+    height: 80px;
+    padding: 22px 10px;
+    font-size: 1.25rem;
+    border-top: 5px solid purple;
   }
