--- a/style.css
+++ b/style.css
@@ -9,8 +9,13 @@ body{
 }
 
 #options_section{
+  position: relative;
   height: 100px;
   padding: 10px 0px 15px 0px;
+}
+
+.option{
+  z-index: -10;
 }
 
 .nav_content{
@@ -18,9 +23,120 @@ body{
   padding: 0px 10px;
 }
 
-input{
+.control_input{
   position: relative;
   top: 4.5%;
+  appearance: none;
+  width: 10vw;
+  height: 9px;
+  outline: none;
+  opacity: .9;
+  transition: opacity .2s;
+  border-radius: 10px;
+}
+
+#ranger{ background: linear-gradient(90deg, #A846A0 20%, #226ce0 20%); }
+#speed{ background: linear-gradient(90deg, #A846A0 40%, #226ce0 40%); }
+
+.control_input:hover{ opacity: 1; }
+
+.control_input::-webkit-slider-thumb{
+  appearance: none;
+  width: 19px;
+  height: 19px;
+  background: #A846A0;
+  border-radius: 50%;
+  border: 1.5px solid #A846A0;
+  box-shadow: -1px 1px 4px;
+  cursor: pointer;
+}
+
+.select-container{
+  position: relative;
+  display: inline-block;
+  z-index: 10;
+}
+
+.select-box{
+  display: flex;
+  width: 11vw;
+  min-width: 150px;
+  flex-direction: column;
+}
+
+.select-box .options-container{
+  background: #272d2d;
+  color: #f5f6fa;
+  max-height: 0;
+  opacity: 0;
+  width: 100%;
+  transition: all 0.4s;
+  border-radius: 0 0 8px 8px;
+  overflow: hidden;
+  order: 1;
+}
+
+.select-box .options-container.active{
+  max-height: 125px;
+  opacity: 1;
+  overflow-y: scroll;
+}
+
+.select-box .options-container::-webkit-scrollbar{
+  width: 7px;
+  background: #0d141f;
+  border-radius: 0 8px 8px 0;
+}
+
+.select-box .options-container::-webkit-scrollbar-thumb{
+  background:#A846A0;
+  border-radius: 0 0 8px 8px;
+}
+
+.select-box .option
+{
+  padding: 0px 5px;
+  cursor: pointer;
+}
+
+.select-box label{
+  cursor: pointer
+}
+
+.select-box .option:hover{
+  background: #414b57;
+}
+
+.select-box .option .radio{
+  display: none;
+}
+
+.select-box .options-container.active + .selected::after{
+  transform: rotateX(180deg);
+  top: -6px;
+}
+
+.selected{
+  position: relative;
+  padding: 0px 5px;
+  cursor: pointer;
+  background: #272d2d;
+  color: #f5f6fa;
+  border-radius: 8px 8px 0 0;
+
+}
+
+
+.selected::after{
+  content: "";
+  background: url('imgs/down.png') no-repeat;
+  background-size: contain;
+  position: absolute;
+  height: 100%;
+  width: 17px;
+  top: 7px;
+  right: 7px;
+  transition: 0.2s;
 }
 
 #container{
@@ -28,7 +144,6 @@ input{
     top: 4.5%;
     height: calc(90vh - 100px);
     display: flex;
-    /* flex-wrap: nowrap; */
     justify-content: center;
     align-items: flex-end;
     overflow: auto;
@@ -39,6 +154,7 @@ input{
     position: absolute;
     right: 0.25rem;
     top: .5rem;
+    cursor: pointer;
   }
   
   .block{
@@ -57,13 +173,11 @@ input{
     border-top-left-radius: .5rem;
     border-top-right-radius: .5rem;
     margin: .3rem .2rem;
-    /* border-radius: .6rem; */
     padding: .3% .3%;
-    /* box-shadow: 4px -3px #ccc; */
     transition: background .4s ease-out, color .2s ease-out;
   }
   
-  .selected{
+  .selected_block{
       background: #A846A0;
       color: #fff;
   }
