--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ body{
   border-radius: 10px;
 }
 
-#ranger{ background: linear-gradient(90deg, #A846A0 20%, #226ce0 20%); }
-#speed{ background: linear-gradient(90deg, #A846A0 40%, #226ce0 40%); }
+/* #ranger{ background: linear-gradient(90deg, #A846A0 20%, #226ce0 20%); } */
+/* #speed{ background: linear-gradient(90deg, #A846A0 66%, #226ce0 66%); } */
 
 .control_input:hover{ opacity: 1; }
 
@@ -174,13 +174,16 @@ body{
     border-top-right-radius: .5rem;
     margin: .3rem .2rem;
     padding: .3% .3%;
-    transition: background .4s ease-out, color .2s ease-out;
+    /* transition: background .4s ease-out, color .2s ease-out; */
   }
   
   .selected_block{
       background: #A846A0;
       color: #fff;
   }
+
+  .pivoted{ background: #C51B54;}
+  .sorted{ background: #008F1F;}
 
   .remove_text{
     text-indent: -9999px;
